--- a/Javascript/index.html
+++ b/Javascript/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
         <link rel="stylesheet" href="style.css">
         <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+        <link href="css/jquery.tagit.css" rel="stylesheet" type="text/css">
         <link href="css/style1.css" rel="stylesheet"> 
     </head>
     <body> 
@@ -40,6 +41,12 @@
                         <button id="search" type="text">Find me a cocktail</button>
                     </section>
                 </form>
+                <div class="row">
+                    <ul id="myTags">
+    <!-- Existing list items will be pre-added to the tags -->
+  
+                    </ul>
+                </div>
                 <div class="row">
                     <div class="col-sm-2" style="background-color:grey;">
                         <div class="table1"> 
@@ -90,7 +97,8 @@
                     </div>
                 </div>
                 <div id="output"></div>
-                <section id="result" style="text-align: center"/>
+                <section id="result"/>
+
                 </section>
                 <section id="name">
                 </section>
@@ -105,6 +113,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.3/jquery-ui.min.js"></script>
         <script src="http://assets.absolutdrinks.com/api/addb-0.5.2.js" type="text/javascript"></script>
         <script src="bootstrap/js/bootstrap.min.js"></script>
+        <script src="js/tag-it.js" type="text/javascript" charset="utf-8"></script>
         <script src="js/recherche.js"></script>
     </body>
 </html>
