--- a/Javascript/index.html
+++ b/Javascript/index.html
@@ -15,17 +15,11 @@
                 <div class="container">
                     <div id = "cleanheader"  aria-hidden="true">
                         <img src="img/banderole.png" id="banderole" alt="banderole" class="img-responsive center-block">
-                        <div class="login" style="text-align: center">
-                            <a href="lien"> Logged in as  :   Dodo la sommure </a>
-                        </div>
                     </div>
                     
                 </div>
             </div>
         </nav>
-        <div class = "inscription"> 
-            <a href="df"> vvvv</a>
-        </div>
         <div id = "notnav">
             <div class="middle">
                 <h1> Create a cocktail based on what you have in stock</h1>
@@ -42,13 +36,12 @@
                     </section>
                 </form>
                 <div class="row">
-                    <ul id="myTags">
-    <!-- Existing list items will be pre-added to the tags -->
+                    <ul class="span4 offset4" id="myTags">
   
                     </ul>
                 </div>
                 <div class="row">
-                    <div class="col-sm-2" style="background-color:grey;">
+                    <div class="col-sm-2" >
                         <div class="table1"> 
                             <table class="table" id="base-spirit-table">
                                 <thead>
@@ -60,7 +53,7 @@
                         </div>
                     </div>
                     <div class="col-sm-1"></div>
-                    <div class="col-sm-2" style="background-color:grey;">
+                    <div class="col-sm-2">
                         <div class="table1"> 
                             <table class="table" id="Mixers-table">
                                 <thead>
@@ -72,7 +65,7 @@
                         </div> 
                     </div>
                     <div class="col-sm-1"></div>
-                    <div class="col-sm-2" style="background-color:grey;">
+                    <div class="col-sm-2">
                         <div class="table1"> 
                             <table class="table" id="Fruit-table">
                                 <thead>
@@ -84,7 +77,7 @@
                         </div>
                     </div>
                     <div class="col-sm-1"></div>
-                    <div class="col-sm-2" style="background-color:grey;">
+                    <div class="col-sm-2">
                         <div class="table1"> 
                             <table class="table" id="Ingredients-table">
                                 <thead>
