--- a/Javascript/index.html
+++ b/Javascript/index.html
@@ -31,8 +31,7 @@
             <div class="searchbar">
                 <form method="GET">
                     <section id="fetch" style="text-align: center" style="display: none">
-                        <input id="searchbar" type="text" placeholder="Search for a cocktail" id="term" />
-                        <button id="search" type="text">Find me a cocktail</button>
+                        <input id="searchbar" type="text" placeholder="Search for a ingredients" id="term" />
                     </section>
                 </form>
                 <div class="row">
