--- a/Javascript/index.html
+++ b/Javascript/index.html
@@ -2,9 +2,8 @@
 <html lang="fr">
     <head>
         <meta charset="utf-8">
-        <title>Hello World</title>
+        <title>Cocktail'O'Mator</title>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-        <link rel="stylesheet" href="style.css">
         <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
         <link href="css/jquery.tagit.css" rel="stylesheet" type="text/css">
         <link href="css/style1.css" rel="stylesheet"> 
@@ -99,9 +98,7 @@
         <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
         <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.3/themes/smoothness/jquery-ui.css" />
         <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.3/jquery-ui.min.js"></script>
-        <script src="http://assets.absolutdrinks.com/api/addb-0.5.2.js" type="text/javascript"></script>
         <script src="bootstrap/js/bootstrap.min.js"></script>
-        <script src="js/tag-it.js" type="text/javascript" charset="utf-8"></script>
         <script src="js/recherche.js"></script>
     </body>
 </html>
