--- a/Javascript/mobile.html
+++ b/Javascript/mobile.html
@@ -9,6 +9,7 @@
         <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
         <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
         <link href="css/style-mobile.css" rel="stylesheet"> 
+        <link rel="icon" href="img/favicon.ico" />
     </head>
     <body> 
         <div data-role="page">
@@ -18,8 +19,8 @@
           </div>
 
           <div data-role="main" class="ui-content">
-            <h1>Create a cocktail based on what you have on stock !</h1>
-            <h2>Enter an ingredient to start</h2>
+            <h2>Create a cocktail based on what you have on stock !</h2>
+            <h3>Enter an ingredient to start</h3>
 
             <input id="searchbar" type="text" placeholder="Search for a ingredients" id="term" />
 
