--- a/Javascript/index.html
+++ b/Javascript/index.html
@@ -7,6 +7,7 @@
         <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
         <link href="css/jquery.tagit.css" rel="stylesheet" type="text/css">
         <link href="css/style1.css" rel="stylesheet"> 
+        <link rel="icon" href="img/favicon.ico" />
     </head>
     <body> 
         <nav class="navbar navbar-default navbar-fixed-top">
@@ -101,10 +102,7 @@
                         </div> 
                     </div>
                 </div>
-                <div id="output"></div>
-                <section id="result"/>
-                </section>
-                </div>
+                <div id="result"></div>
             </div>
         </div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
